--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="simple">
           <h5>Simple Buttons <span>(buttons with simple API calls)</span></h5>
           <div class="btn-group btn-group-justified">
-            <a class="btn btn-default btn-lg btn-video" data-vimeo="87882921">Modal</a>
+            <a class="btn btn-default btn-lg btn-video" data-vimeo="143452017">Modal</a>
             <a class="play btn btn-lg btn-default">Play</a>
             <a class="pause btn btn-lg btn-default">Pause</a>
             <a class="unload btn btn-lg btn-default">Unload</a>
@@ -83,13 +83,13 @@
           <div class="btn-group btn-group-justified">
             <a class="btn btn-default addClip" title="Add a new clip.">
               <input type="text" class="form-control" value="87882921" size="8">Video</a>
-            <a class="seek btn btn-default"> 
+            <a class="seek btn btn-default">
               <input type="text" class="form-control" value="30" size="3" maxlength="3">Seek</a>
-            <a class="volume btn btn-default"> 
+            <a class="volume btn btn-default">
               <input type="text" class="form-control" value="0.5" size="3" maxlength="3">Volume</a>
-            <a class="loop btn btn-default"> 
+            <a class="loop btn btn-default">
               <input type="text" class="form-control" value="0" size="1" maxlength="1">Loop</a>
-            <a class="color btn btn-default" data-value="00adef"> 
+            <a class="color btn btn-default" data-value="00adef">
               <input type="text" class="form-control" value="00adef" size="5">Color</a>
             <a class="randomColor btn btn-default">
               <input type="text" class="form-control" value="00adef" size="5">Random Color</a>
@@ -118,7 +118,8 @@
   <!-- Libs -->
   <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
   <script src='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.min.js'></script>
-  <script src='lib/froogaloop.min.js'></script>
+  <script src="//f.vimeocdn.com/js/froogaloop2.min.js"></script>
+  <!--<script src='src/components/froogaloop/froogaloop.min.js'></script>-->
 
   <!-- Developing -->
   <script src="//cdnjs.cloudflare.com/ajax/libs/coffee-script/1.6.3/coffee-script.min.js"></script>
