--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <!-- Le Video Modal -->
 <div id="videoModal" class="modal fade bs-video-modal-lg" tabindex="-1" role="dialog" aria-labelledby="Video | Dermo Products" aria-hidden="true">
   <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <!-- yuotube <div id="player" class="video-player"></div> -->
+    <div class="video-content-modal">
     </div>
   </div>
 </div>
@@ -29,8 +28,7 @@
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <div class="video-content">
-          <div class="video-holder">
-          </div>
+
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
@@ -116,8 +114,8 @@
   </div>
 </div>
   <!-- Libs -->
-  <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
-  <script src='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.min.js'></script>
+  <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js'></script>
+  <script src='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js'></script>
   <script src="//f.vimeocdn.com/js/froogaloop2.min.js"></script>
   <!--<script src='src/components/froogaloop/froogaloop.min.js'></script>-->
 
