--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Vimeo API</title>
-  <link rel="stylesheet/less" type="text/css" href="less/index.less" />
+  <link rel="stylesheet/less" type="text/css" href="src/less/index.less" />
 </head>
 <body>
 <!--
@@ -123,7 +123,8 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/coffee-script/1.6.3/coffee-script.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/1.4.1/less.min.js"></script>
   <!-- Scripts -->
-  <script type="text/coffeescript" src="coffeescript/index.coffee"></script>
+  <script type="text/coffeescript" src="src/coffee/_debouncedresize.coffee"></script>
+  <script type="text/coffeescript" src="src/coffee/index.coffee"></script>
 
 </body>
 
